Specify height for main image to prevent stretching

--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ a {
 
 .right {
     width: 50%;
+    height: 300px;
     background-color: darkgray;
 }
 
